# Pharaglow-Analysis

./: Analyzing_pharaglowv5_(merge).ipynb  Analyzing_pharaglowv5_(merge2).ipynb  Analyzing_pharaglowv5_(rerouting+automaticpumping).ipynb  Analyzing_updated_pharaglow(with_rerouting).ipynb  Figure1_SmellPriming.ipynb  NIFStyle.mplstyle  Post-pharaglow_V&P_analysis(easysave).ipynb  Post-pharaglow_V&P_analysis(no_lawns).ipynb  Post-pharaglow_V&P_analysis.ipynb  README.md  Test  Using_pganalysis.ipynb  makeMovie.ipynb  plot_example.py  plotter.py  pyproject.toml  setup.py
data/: synthetic_0.json
notebooks/: Figure1_SmellPriming.ipynb  Post-pharaglow_V&P_analysis(easysave).ipynb  makeMovie.ipynb
pg_analysis/: loader.py  plotter.py  style.py  tools.py
pg_analysis/tests/: test_plotter.py
